[gd_scene load_steps=27 format=3 uid="uid://cnex52q0sfe3n"]

[ext_resource type="PackedScene" uid="uid://dftjyjmjsdrl3" path="res://cenas/player.tscn" id="1_75yar"]
[ext_resource type="Texture2D" uid="uid://di58b1lsaeb7n" path="res://sprites/fundo 1.png" id="1_h5mg2"]
[ext_resource type="Texture2D" uid="uid://c4mo8eboo5nei" path="res://sprites/luzjanela.png" id="2_m6a0s"]
[ext_resource type="Texture2D" uid="uid://diwdwdrmp2gtp" path="res://sprites/porta.png" id="3_5d6dv"]
[ext_resource type="Texture2D" uid="uid://d1kj31bge03t4" path="res://sprites/luzposte.png" id="4_hh8g8"]
[ext_resource type="Texture2D" uid="uid://cifcc7ycbafg6" path="res://sprites/poste.png" id="5_mcr5q"]
[ext_resource type="Script" uid="uid://ct778fpma3wo7" path="res://scripts/puzzle_1.gd" id="7_5d6dv"]
[ext_resource type="Texture2D" uid="uid://cf2ct3ixn2oui" path="res://sprites/icon.svg" id="7_m6a0s"]
[ext_resource type="Texture2D" uid="uid://66pxj7x3tfnn" path="res://sprites/bandeirante.png" id="9_7oyat"]
[ext_resource type="Texture2D" uid="uid://bbkes7t86mknq" path="res://sprites/soldado romano.png" id="10_gycn0"]
[ext_resource type="Texture2D" uid="uid://d25q7pmgfxici" path="res://sprites/cavalaria (r).png" id="11_81fan"]
[ext_resource type="Texture2D" uid="uid://bjvba1gy2xx5i" path="res://sprites/ubirajara.png" id="12_6u4a5"]
[ext_resource type="Script" uid="uid://corlibthfaoue" path="res://scripts/estatua_1_static.gd" id="12_81fan"]
[ext_resource type="Script" uid="uid://chwkrbwd3okan" path="res://scripts/estatua_1.gd" id="12_gycn0"]
[ext_resource type="Texture2D" uid="uid://c7iccpbl1p684" path="res://sprites/cavalaria (l).png" id="13_awqth"]
[ext_resource type="Texture2D" uid="uid://2jpvh73ymrjn" path="res://sprites/vargas.png" id="14_28pwm"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_mfpfr"]
polygon = PackedVector2Array(-412.75168, 589.31335, -377.12958, 590.08777, -377.12958, 743.4176, 321.37326, 744.192, 325.2452, 604.0268, 361.6417, 607.1244, 352.21655, 744.5614, 580.0206, 747.2896, 573.8255, 168.81776, 375.58078, 171.91533, 364.7393, 194.37274, 348.47702, 201.34229, 336.08673, 194.37274, 338.4099, 174.23851, 232.31802, 169.59215, 252.45226, 145.58595, 254.77544, 111.51265, 572.2767, 113.06143, 569.95355, -82.08569, 554.46564, -78.98813, 525.8131, -83.63448, 246.2571, -86.732056, 241.61075, -13.164686, 216.83015, -12.390293, 207.53743, -214.50696, 234.6412, -195.14713, 243.15953, -115.38461, 568.4047, -109.96386, 560.6608, -648.1673, -442.17862, -658.2344, -590.08777, -655.13684, -592.41095, 743.4176, -385.64792, 742.64325, -386.4223, 767.4238, -613.3196, 765.87506, -613.3196, -674.49664, 581.5694, -672.9479, 598.6061, 763.5519, -380.22714, 767.4238, -380.22714, 744.96643, -412.75168, 742.64325)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s82s3"]
size = Vector2(240.06184, 2083.1182)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dbekb"]
size = Vector2(175.0129, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7oyat"]
size = Vector2(20, 105.31749)

[sub_resource type="CircleShape2D" id="CircleShape2D_gycn0"]
radius = 25.566784

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5d6dv"]
size = Vector2(128, 130)

[sub_resource type="CircleShape2D" id="CircleShape2D_x5eif"]
radius = 104.0865

[sub_resource type="CircleShape2D" id="CircleShape2D_81fan"]
radius = 103.94229

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3yj5"]
size = Vector2(132, 147)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gycn0"]
size = Vector2(282, 312)

[node name="Sandbox" type="Node2D"]

[node name="Fundo1" type="Sprite2D" parent="."]
z_index = -8
position = Vector2(14.999992, 42)
scale = Vector2(1.2913333, 1.2913333)
texture = ExtResource("1_h5mg2")

[node name="Luzes das Janelas" type="Node2D" parent="Fundo1"]

[node name="LuzJanela" type="PointLight2D" parent="Fundo1/Luzes das Janelas"]
position = Vector2(-424.36752, -433.66028)
rotation = 3.1415927
scale = Vector2(0.87648404, 0.87648404)
energy = 3.29
range_z_min = -500
shadow_enabled = true
texture = ExtResource("2_m6a0s")

[node name="LuzJanela2" type="PointLight2D" parent="Fundo1/Luzes das Janelas"]
position = Vector2(-247.80594, -433.66028)
rotation = 3.1415927
scale = Vector2(0.87648404, 0.87648404)
energy = 3.29
range_z_min = -500
shadow_enabled = true
texture = ExtResource("2_m6a0s")

[node name="LuzJanela3" type="PointLight2D" parent="Fundo1/Luzes das Janelas"]
position = Vector2(94.476, -429.01392)
rotation = 3.1415927
scale = Vector2(0.87648404, 0.87648404)
energy = 3.29
range_z_min = -500
shadow_enabled = true
texture = ExtResource("2_m6a0s")

[node name="LuzJanela4" type="PointLight2D" parent="Fundo1/Luzes das Janelas"]
position = Vector2(224.54167, -431.36945)
rotation = 3.1415927
scale = Vector2(0.87648404, 0.87648404)
energy = 3.29
range_z_min = -500
shadow_enabled = true
texture = ExtResource("2_m6a0s")

[node name="LuzJanela5" type="PointLight2D" parent="Fundo1/Luzes das Janelas"]
position = Vector2(-90.60402, -429.01392)
rotation = 3.1415927
scale = Vector2(0.87648404, 0.87648404)
energy = 3.29
range_z_min = -500
shadow_enabled = true
texture = ExtResource("2_m6a0s")

[node name="LuzJanela6" type="PointLight2D" parent="Fundo1/Luzes das Janelas"]
position = Vector2(425.91635, 503.3557)
rotation = 4.712389
scale = Vector2(0.59016865, 0.59016865)
energy = 3.29
range_z_min = -500
shadow_enabled = true
texture = ExtResource("2_m6a0s")

[node name="LuzJanela7" type="PointLight2D" parent="Fundo1/Luzes das Janelas"]
position = Vector2(404.23334, 257.09857)
rotation = 4.712389
scale = Vector2(0.6733364, 0.6733364)
energy = 3.29
range_z_min = -500
shadow_enabled = true
texture = ExtResource("2_m6a0s")

[node name="LuzJanela8" type="PointLight2D" parent="Fundo1/Luzes das Janelas"]
position = Vector2(-238.51315, 572.2767)
rotation = 6.2831855
scale = Vector2(0.6733364, 0.6733364)
energy = 3.29
range_z_min = -500
shadow_enabled = true
texture = ExtResource("2_m6a0s")

[node name="LuzJanela9" type="PointLight2D" parent="Fundo1/Luzes das Janelas"]
position = Vector2(241.6107, 574.59985)
rotation = 6.2831855
scale = Vector2(0.6733364, 0.6733364)
energy = 3.29
range_z_min = -500
shadow_enabled = true
texture = ExtResource("2_m6a0s")

[node name="LuzJanela10" type="PointLight2D" parent="Fundo1/Luzes das Janelas"]
position = Vector2(392.6174, 574.59985)
rotation = 6.2831855
scale = Vector2(0.6733364, 0.6733364)
energy = 3.29
range_z_min = -500
shadow_enabled = true
texture = ExtResource("2_m6a0s")

[node name="LuzJanela11" type="PointLight2D" parent="Fundo1/Luzes das Janelas"]
position = Vector2(533.557, 576.92303)
rotation = 6.2831855
scale = Vector2(0.6733364, 0.6733364)
energy = 3.29
range_z_min = -500
shadow_enabled = true
texture = ExtResource("2_m6a0s")

[node name="LuzJanela12" type="PointLight2D" parent="Fundo1/Luzes das Janelas"]
position = Vector2(-426.6907, 574.59985)
rotation = 6.2831855
scale = Vector2(0.6733364, 0.6733364)
energy = 3.29
range_z_min = -500
shadow_enabled = true
texture = ExtResource("2_m6a0s")

[node name="LuzJanela13" type="PointLight2D" parent="Fundo1/Luzes das Janelas"]
position = Vector2(-549.045, 574.59985)
rotation = 6.2831855
scale = Vector2(0.6733364, 0.6733364)
energy = 3.29
range_z_min = -500
shadow_enabled = true
texture = ExtResource("2_m6a0s")

[node name="LuzJanela14" type="PointLight2D" parent="Fundo1/Luzes das Janelas"]
position = Vector2(378.67825, 11.615856)
rotation = 4.712389
scale = Vector2(0.76822436, 0.76822436)
energy = 3.29
range_z_min = -500
shadow_enabled = true
texture = ExtResource("2_m6a0s")

[node name="Paredes" type="Node2D" parent="Fundo1"]

[node name="StaticBody2D" type="StaticBody2D" parent="Fundo1/Paredes"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Fundo1/Paredes/StaticBody2D"]
polygon = PackedVector2Array(243.15953, -116.159004, 234.6412, -196.69592, 206.76305, -216.05576, 217.60455, -12.390293, 241.61075, -12.390293, 246.2571, -87.506454, 571.5023, -82.08569, 571.5023, 112.28705, 255.54982, 112.28705, 252.45226, 144.81157, 232.31802, 169.59215, 337.6355, 174.23851, 334.53793, 199.79349, 363.96487, 193.59834, 376.35516, 171.14095, 573.0511, 168.04337, 580.79504, 739.54565, 353.6352, 741.9656, 361.6417, 607.1244, 323.69644, 603.25244, 320.52875, 742.3182, -0.77438736, 745.7408, -2.3231735, 768.19824, 601.7037, 763.5519, 579.2462, -667.5271, -610.222, -669.07587, -612.54517, 765.87506, -10.841501, 768.9726, -9.292714, 742.64325, -379.94568, 742.6433, -376.3552, 587.7646, -411.9773, 589.31335, -413.03342, 742.6433, -592.41095, 742.64325, -590.8622, -648.1673, 560.6608, -648.1673, 568.4047, -109.96386)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Fundo1/Paredes/StaticBody2D"]
polygon = PackedVector2Array(-500.25812, -533.55707, -501.80692, -518.06915, -380.22714, -503.3557, -379.45276, -491.7398, -367.06247, -491.7398, -354.67218, -505.6789, -355.44656, -527.3619)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Fundo1/Paredes/StaticBody2D"]
position = Vector2(32.52453, 164.1714)
polygon = PackedVector2Array(-500.25812, -533.55707, -501.80692, -518.06915, -464.63602, -514.1972, -420.4956, -514.97156, -416.62363, -476.25192, -402.68454, -466.9592, -389.51987, -476.25192, -396.4894, -507.22766, -382.55032, -517.2948, -284.20236, -511.87402, -287.29993, -489.41663, -281.1048, -479.34952, -260.19617, -492.5142, -255.54982, -512.64844, -207.53743, -520.39233, -202.11667, -535.10583, -221.47652, -537.429, -480.8983, -540.5266)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Fundo1/Paredes/StaticBody2D"]
polygon = PackedVector2Array(-69.6954, -369.38562, -82.86009, -355.44653, -73.56737, -343.05627, -13.9390745, -339.95868, 13.164694, -346.92822, 34.073315, -346.92822, 51.10997, -346.92822, 60.40269, -361.64172, 58.8539, -377.904)

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Fundo1/Paredes/StaticBody2D"]
polygon = PackedVector2Array(167.26898, -380.22717, 164.9458, -369.38562, 175.01291, -350.80017, 211.40941, -353.12335, 216.83015, -347.70264, 237.73878, -346.92822, 252.45226, -366.2881, 243.15953, -374.03198, 240.83635, -384.09912)

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Fundo1/Paredes/StaticBody2D"]
polygon = PackedVector2Array(319.82446, -407.33093, 306.65976, -398.81256, 311.30612, -355.44653, 327.5684, -349.2514, 377.90396, -348.477, 387.97107, -343.05627, 429.78833, -339.18433, 453.0201, -359.31854, 446.05057, -369.38562, 392.61743, -376.35516, 388.74548, -380.22717, 340.7331, -383.3247)

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="Fundo1/Paredes/StaticBody2D"]
polygon = PackedVector2Array(-390.29428, -201.34229, -377.12958, -211.4094, -356.99536, -210.635, -345.37946, -139.39081, -257.0986, -141.71399, -250.12906, -205.98863, -236.18997, -219.15332, -215.28136, -208.31181, -223.79968, -20.134228, -260.97058, -20.134228, -257.0986, -99.12235, -274.13525, -97.57356, -280.3304, -89.05524, -350.8002, -85.957664, -356.22095, -93.7016, -462.31287, -92.15282, -460.76407, -118.482185, -451.47134, -115.38461, -440.62985, -126.22612, -387.9711, -135.51883)

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="Fundo1/Paredes/StaticBody2D"]
polygon = PackedVector2Array(-444.5018, 112.28705, -450.69696, 158.75064, -442.17862, 167.26897, -245.4827, 160.29942, -249.35466, 101.44554)

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="Fundo1/Paredes/StaticBody2D"]
polygon = PackedVector2Array(-408.8797, 300.46466, -409.6541, 441.40424, -373.2576, 437.5323, -369.38565, 297.36707)

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="Fundo1/Paredes/StaticBody2D"]
polygon = PackedVector2Array(334.53793, 318.2757, 366.28806, 317.50128, 370.16003, 423.5932, 335.31232, 424.36755)

[node name="LightOccluder2D" type="LightOccluder2D" parent="Fundo1"]
visible = false
occluder = SubResource("OccluderPolygon2D_mfpfr")

[node name="Portas" type="Node2D" parent="Fundo1"]

[node name="Porta Soberania" type="StaticBody2D" parent="Fundo1/Portas"]
position = Vector2(-411.97754, 518.8436)
scale = Vector2(0.1, 0.1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fundo1/Portas/Porta Soberania"]
position = Vector2(135.52075, -96.80029)
shape = SubResource("RectangleShape2D_s82s3")

[node name="Sprite2D" type="Sprite2D" parent="Fundo1/Portas/Porta Soberania"]
texture = ExtResource("3_5d6dv")

[node name="Porta Soberania" type="StaticBody2D" parent="Fundo1/Portas/Porta Soberania"]
position = Vector2(0, -2800)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fundo1/Portas/Porta Soberania/Porta Soberania"]
position = Vector2(135.52075, -96.80029)
shape = SubResource("RectangleShape2D_s82s3")

[node name="Sprite2D" type="Sprite2D" parent="Fundo1/Portas/Porta Soberania/Porta Soberania"]
texture = ExtResource("3_5d6dv")

[node name="Porta Trabalho" type="StaticBody2D" parent="Fundo1/Portas"]
position = Vector2(-530.4595, -103.768715)

[node name="Sprite2D" type="Sprite2D" parent="Fundo1/Portas/Porta Trabalho"]
rotation = 4.712389
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_5d6dv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fundo1/Portas/Porta Trabalho"]
position = Vector2(14.71347, 0)
shape = SubResource("RectangleShape2D_dbekb")

[node name="Porta Trabalho" type="StaticBody2D" parent="Fundo1/Portas/Porta Trabalho"]
position = Vector2(300, 120)
rotation = 1.5707964

[node name="Sprite2D" type="Sprite2D" parent="Fundo1/Portas/Porta Trabalho/Porta Trabalho"]
rotation = 4.712389
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_5d6dv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fundo1/Portas/Porta Trabalho/Porta Trabalho"]
position = Vector2(14.71347, 0)
shape = SubResource("RectangleShape2D_dbekb")

[node name="Porta Trabalho2" type="StaticBody2D" parent="Fundo1/Portas/Porta Trabalho"]
position = Vector2(297.36707, -120.030975)
rotation = 1.5707964

[node name="Sprite2D" type="Sprite2D" parent="Fundo1/Portas/Porta Trabalho/Porta Trabalho2"]
rotation = 4.712389
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_5d6dv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fundo1/Portas/Porta Trabalho/Porta Trabalho2"]
position = Vector2(14.71347, 0)
shape = SubResource("RectangleShape2D_dbekb")

[node name="Porta Cidadania" type="StaticBody2D" parent="Fundo1/Portas"]
position = Vector2(943.98553, -56.530716)
rotation = 4.712389

[node name="Sprite2D" type="Sprite2D" parent="Fundo1/Portas/Porta Cidadania"]
position = Vector2(301.23904, -644.29535)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_5d6dv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fundo1/Portas/Porta Cidadania"]
position = Vector2(319.05008, -655.13684)
shape = SubResource("RectangleShape2D_7oyat")

[node name="Porta Cidadania" type="StaticBody2D" parent="Fundo1/Portas/Porta Cidadania"]
position = Vector2(302.01343, -851.05835)
rotation = 3.1415927

[node name="Sprite2D" type="Sprite2D" parent="Fundo1/Portas/Porta Cidadania/Porta Cidadania"]
rotation = 3.1415927
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_5d6dv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fundo1/Portas/Porta Cidadania/Porta Cidadania"]
rotation = 3.1415927
shape = SubResource("RectangleShape2D_7oyat")

[node name="Porta Cidadania2" type="StaticBody2D" parent="Fundo1/Portas/Porta Cidadania"]
position = Vector2(301.239, -1060.919)
rotation = 3.1415927

[node name="Sprite2D" type="Sprite2D" parent="Fundo1/Portas/Porta Cidadania/Porta Cidadania2"]
rotation = 3.1415927
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_5d6dv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fundo1/Portas/Porta Cidadania/Porta Cidadania2"]
rotation = 3.1415927
shape = SubResource("RectangleShape2D_7oyat")

[node name="Porta Cidadania3" type="StaticBody2D" parent="Fundo1/Portas/Porta Cidadania"]
position = Vector2(211.40938, -708.56995)
rotation = 4.712389

[node name="Sprite2D" type="Sprite2D" parent="Fundo1/Portas/Porta Cidadania/Porta Cidadania3"]
rotation = 3.1415927
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_5d6dv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fundo1/Portas/Porta Cidadania/Porta Cidadania3"]
rotation = 3.1415927
shape = SubResource("RectangleShape2D_7oyat")

[node name="Porta Cidadania4" type="StaticBody2D" parent="Fundo1/Portas/Porta Cidadania"]
position = Vector2(302.01346, -436.75787)
rotation = 3.1415927

[node name="Sprite2D" type="Sprite2D" parent="Fundo1/Portas/Porta Cidadania/Porta Cidadania4"]
rotation = 3.1415927
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_5d6dv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fundo1/Portas/Porta Cidadania/Porta Cidadania4"]
rotation = 3.1415927
shape = SubResource("RectangleShape2D_7oyat")

[node name="Luz das Lanternas" type="StaticBody2D" parent="Fundo1"]
z_index = 10

[node name="Luz da Escada (2)" type="CollisionShape2D" parent="Fundo1/Luz das Lanternas"]
z_index = 1
position = Vector2(165.72018, 130.8725)
shape = SubResource("CircleShape2D_gycn0")

[node name="PointLight2D" type="PointLight2D" parent="Fundo1/Luz das Lanternas/Luz da Escada (2)"]
position = Vector2(11.267395, 5.131592)
scale = Vector2(0.32592592, 0.32592592)
energy = 2.0
texture = ExtResource("4_hh8g8")

[node name="Sprite2D" type="Sprite2D" parent="Fundo1/Luz das Lanternas/Luz da Escada (2)"]
z_index = -1
scale = Vector2(0.08, 0.08)
texture = ExtResource("5_mcr5q")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Fundo1/Luz das Lanternas"]
z_index = 1
position = Vector2(306.6598, 445.2762)
shape = SubResource("CircleShape2D_gycn0")

[node name="PointLight2D3" type="PointLight2D" parent="Fundo1/Luz das Lanternas/CollisionShape2D2"]
position = Vector2(-8.583069e-06, 0)
scale = Vector2(0.362, 0.362)
energy = 2.0
texture = ExtResource("4_hh8g8")

[node name="Sprite2D" type="Sprite2D" parent="Fundo1/Luz das Lanternas/CollisionShape2D2"]
z_index = -4
scale = Vector2(0.08, 0.08)
texture = ExtResource("5_mcr5q")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Fundo1/Luz das Lanternas"]
z_index = 1
position = Vector2(-296.59265, 439.85544)
shape = SubResource("CircleShape2D_gycn0")

[node name="PointLight2D4" type="PointLight2D" parent="Fundo1/Luz das Lanternas/CollisionShape2D4"]
position = Vector2(-353.694, 0)
scale = Vector2(0.362, 0.362)
energy = 1.5
texture = ExtResource("4_hh8g8")
offset = Vector2(1000, 0)

[node name="Sprite2D" type="Sprite2D" parent="Fundo1/Luz das Lanternas/CollisionShape2D4"]
z_index = -4
scale = Vector2(0.08, 0.08)
texture = ExtResource("5_mcr5q")

[node name="Luz da Escada (1)" type="CollisionShape2D" parent="Fundo1/Luz das Lanternas"]
z_index = 1
position = Vector2(-190.50076, 134.74446)
shape = SubResource("CircleShape2D_gycn0")

[node name="PointLight2D" type="PointLight2D" parent="Fundo1/Luz das Lanternas/Luz da Escada (1)"]
position = Vector2(11.267395, 5.131592)
scale = Vector2(0.32592592, 0.32592592)
energy = 2.0
texture = ExtResource("4_hh8g8")

[node name="Sprite2D" type="Sprite2D" parent="Fundo1/Luz das Lanternas/Luz da Escada (1)"]
z_index = -1
scale = Vector2(0.08, 0.08)
texture = ExtResource("5_mcr5q")

[node name="Puzzle_1" type="Area2D" parent="."]
position = Vector2(25, 482)
script = ExtResource("7_5d6dv")

[node name="Sprite2D" type="Sprite2D" parent="Puzzle_1"]
texture = ExtResource("7_m6a0s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puzzle_1"]
shape = SubResource("RectangleShape2D_5d6dv")

[node name="Player" parent="." instance=ExtResource("1_75yar")]
position = Vector2(617, 475)
collision_mask = 2

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="Estatuas" type="Node" parent="."]

[node name="Estatua 4" type="StaticBody2D" parent="Estatuas"]
position = Vector2(5, -182)

[node name="Atrito" type="CollisionShape2D" parent="Estatuas/Estatua 4"]
shape = SubResource("CircleShape2D_x5eif")

[node name="Sprite2D" type="Sprite2D" parent="Estatuas/Estatua 4"]
z_index = -4
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_7oyat")

[node name="Estatua 3" type="StaticBody2D" parent="Estatuas"]
position = Vector2(400, 850)

[node name="Atrito" type="CollisionShape2D" parent="Estatuas/Estatua 3"]
shape = SubResource("CircleShape2D_x5eif")

[node name="Sprite2D" type="Sprite2D" parent="Estatuas/Estatua 3"]
z_index = 1
scale = Vector2(0.15, 0.15)
texture = ExtResource("10_gycn0")

[node name="Estatua 2" type="StaticBody2D" parent="Estatuas"]
position = Vector2(412, 332)
scale = Vector2(0.9, 0.9)

[node name="Atrito" type="CollisionShape2D" parent="Estatuas/Estatua 2"]
scale = Vector2(0.9, 0.9)
shape = SubResource("CircleShape2D_x5eif")

[node name="Sprite2D" type="Sprite2D" parent="Estatuas/Estatua 2"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("11_81fan")

[node name="Estatua 1 (Ubirajara)" type="StaticBody2D" parent="Estatuas"]
position = Vector2(-412, 900)
collision_layer = 2
collision_mask = 0
script = ExtResource("12_81fan")

[node name="Sprite2D" type="Sprite2D" parent="Estatuas/Estatua 1 (Ubirajara)"]
position = Vector2(15, -57)
scale = Vector2(0.13394919, 0.13394919)
texture = ExtResource("12_6u4a5")

[node name="Atrito" type="CollisionShape2D" parent="Estatuas/Estatua 1 (Ubirajara)"]
shape = SubResource("CircleShape2D_x5eif")

[node name="Area2D" type="Area2D" parent="Estatuas/Estatua 1 (Ubirajara)"]
collision_layer = 4
script = ExtResource("12_gycn0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Estatuas/Estatua 1 (Ubirajara)/Area2D"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_81fan")

[node name="Estatua 5" type="StaticBody2D" parent="Estatuas"]
position = Vector2(-413.00006, 322)
scale = Vector2(0.80999994, 0.80999994)

[node name="Atrito" type="CollisionShape2D" parent="Estatuas/Estatua 5"]
scale = Vector2(0.9, 0.9)
shape = SubResource("CircleShape2D_x5eif")

[node name="Sprite2D" type="Sprite2D" parent="Estatuas/Estatua 5"]
z_index = -1
scale = Vector2(0.13, 0.13)
texture = ExtResource("13_awqth")

[node name="Getulio" type="StaticBody2D" parent="Estatuas"]
position = Vector2(-413, 23)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Estatuas/Getulio"]
position = Vector2(2, 4.5)
shape = SubResource("RectangleShape2D_v3yj5")

[node name="Sprite2D" type="Sprite2D" parent="Estatuas/Getulio"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("14_28pwm")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(22, 146)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_gycn0")

[connection signal="body_entered" from="Estatuas/Estatua 1 (Ubirajara)/Area2D" to="Estatuas/Estatua 1 (Ubirajara)/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Estatuas/Estatua 1 (Ubirajara)/Area2D" to="Estatuas/Estatua 1 (Ubirajara)/Area2D" method="_on_body_exited"]
